updating social sharing to use basic social icons styles

--- a/index.html
+++ b/index.html
@@ -614,65 +614,65 @@
                     <h5 class="reset" id="section--tables">Page Sharing</h5>
                     <p>Page sharing is made simple with Bond: click a button, get your sharing options! It's that easy. Social account icons are automatically color coded based on the target URL. All swatches are exact and on-brand.</p>
                     <a href="#" class="social-sharing__trigger button--basic">Share This Page</a>
-                    <ul class="social-sharing__list">
-                        <li class="social-sharing__list-item">
-                            <a href="https://facebook.com" class="social-sharing__list-item-link">
+                    <ul class="social-sharing__list social-icons no-bg">
+                        <li class="social-icons__item">
+                            <a href="https://facebook.com" class="social-icons__item-link">
                                 <svg viewBox="0 0 24 24" class="core-icon--facebook">
                                     <use xlink:href="#core-icon--facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-sharing__list-item">
-                            <a href="https://twitter.com" class="social-sharing__list-item-link">
+                        <li class="social-icons__item">
+                            <a href="https://twitter.com" class="social-icons__item-link">
                                 <svg viewBox="0 0 24 24" class="core-icon--twitter">
                                     <use xlink:href="#core-icon--twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-sharing__list-item">
-                            <a href="https://linkedin.com" class="social-sharing__list-item-link">
+                        <li class="social-icons__item">
+                            <a href="https://linkedin.com" class="social-icons__item-link">
                                 <svg viewBox="0 0 24 24" class="core-icon--linkedin">
                                     <use xlink:href="#core-icon--linkedin"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-sharing__list-item">
-                            <a href="https://plus.google.com" class="social-sharing__list-item-link">
+                        <li class="social-icons__item">
+                            <a href="https://plus.google.com" class="social-icons__item-link">
                                 <svg viewBox="0 0 24 24" class="core-icon--google-plus">
                                     <use xlink:href="#core-icon--google-plus"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-sharing__list-item">
-                            <a href="https://youtube.com" class="social-sharing__list-item-link">
+                        <li class="social-icons__item">
+                            <a href="https://youtube.com" class="social-icons__item-link">
                                 <svg viewBox="0 0 24 24" class="core-icon--youtube">
                                     <use xlink:href="#core-icon--youtube"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-sharing__list-item">
-                            <a href="https://pinterest.com" class="social-sharing__list-item-link">
+                        <li class="social-icons__item">
+                            <a href="https://pinterest.com" class="social-icons__item-link">
                                 <svg viewBox="0 0 24 24" class="core-icon--pinterest">
                                     <use xlink:href="#core-icon--pinterest"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-sharing__list-item">
-                            <a href="https://instagram.com" class="social-sharing__list-item-link">
+                        <li class="social-icons__item">
+                            <a href="https://instagram.com" class="social-icons__item-link">
                                 <svg viewBox="0 0 24 24" class="core-icon--instagram">
                                     <use xlink:href="#core-icon--instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-sharing__list-item">
-                            <a href="https://dribbble.com" class="social-sharing__list-item-link">
+                        <li class="social-icons__item">
+                            <a href="https://dribbble.com" class="social-icons__item-link">
                                 <svg viewBox="0 0 24 24" class="core-icon--dribbble">
                                     <use xlink:href="#core-icon--dribbble"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-sharing__list-item">
-                            <a href="#" class="social-sharing__list-item-link--email">
+                        <li class="social-icons__item">
+                            <a href="#" class="social-icons__item-link--email social-sharing__email-trigger">
                                 <svg viewBox="0 0 24 24" class="core-icon--email">
                                     <use xlink:href="#core-icon--email"></use>
                                 </svg>
@@ -1283,7 +1283,7 @@
                             </ul>
                         </nav>
                         <!-- Social Icons -->
-                        <ul class="social-icons">
+                        <ul class="social-icons no-bg">
                             <li class="social-icons__item">
                                 <a href="https://facebook.com" class="social-icons__item-link">
                                     <svg viewBox="0 0 24 24" class="core-icon--facebook">
