--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <ul class="sidebar-nav tab-bar--4-up">
             <li class="sidebar-nav__item--logo">
                 <a href="/" class="sidebar-nav__item-link">
-                    <img src="http://bond.codeandmortar.com/assets/bond-logo.svg" alt="Logo">
+                    <img src="https://bond.codeandmortar.com/assets/bond-logo.svg" alt="Logo">
                 </a>
             </li>
             <li class="sidebar-nav__item in-tab-bar">
@@ -282,135 +282,135 @@
             <ul class="sidebar-nav__pane-nav--level-1">
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--header" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Header</a>
-                    <a href="http://bond.codeandmortar.com/docs/#header" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#header" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--hero" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Hero</a>
-                    <a href="http://bond.codeandmortar.com/docs/#hero" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#hero" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--section-title" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Section Title</a>
-                    <a href="http://bond.codeandmortar.com/docs/#section-titles" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#section-titles" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--button-group" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Button Group</a>
-                    <a href="http://bond.codeandmortar.com/docs/#buttons" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#buttons" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--content" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Content</a>
-                    <a href="http://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--wp-images" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Wordpress Images</a>
-                    <a href="http://bond.codeandmortar.com/docs/#wordpress-images" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#wordpress-images" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--lists" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Lists</a>
-                    <a href="http://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--blockquotes" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Blockquote</a>
-                    <a href="http://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--headings" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Headings</a>
-                    <a href="http://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--broken-images" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Broken Images</a>
-                    <a href="http://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--embeds" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Embeds</a>
-                    <a href="http://bond.codeandmortar.com/docs/#responsive-embeds" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#responsive-embeds" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--tables" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Tables</a>
-                    <a href="http://bond.codeandmortar.com/docs/#tables-responsive" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#tables-responsive" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--sharing" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Page Sharing</a>
-                    <a href="http://bond.codeandmortar.com/docs/#social" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#social" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--maps" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Google Map Embed</a>
-                    <a href="http://bond.codeandmortar.com/docs/#maps" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#maps" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--alerts" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Alerts</a>
-                    <a href="http://bond.codeandmortar.com/docs/#alerts" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#alerts" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--pagination-basic" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Pagination</a>
-                    <a href="http://bond.codeandmortar.com/docs/#pagination" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#pagination" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--blocks" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Blocks</a>
-                    <a href="http://bond.codeandmortar.com/docs/#blocks" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#blocks" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--accordions" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Accordions</a>
-                    <a href="http://bond.codeandmortar.com/docs/#accordions" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#accordions" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--tabs" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Tabs</a>
-                    <a href="http://bond.codeandmortar.com/docs/#tabs" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#tabs" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--partners" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Partners Grid</a>
-                    <a href="http://bond.codeandmortar.com/docs/#partners-grid" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#partners-grid" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--breadcrumbs" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Breadcrumbs</a>
-                    <a href="http://bond.codeandmortar.com/docs/#breadcrumbs" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#breadcrumbs" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--dialogs" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Dialog</a>
-                    <a href="http://bond.codeandmortar.com/docs/#dialog" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#dialog" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--galleries" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Gallery</a>
-                    <a href="http://bond.codeandmortar.com/docs/#galleries" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#galleries" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--page-title" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Page Title (Subpage Banner)</a>
-                    <a href="http://bond.codeandmortar.com/docs/#page-titles-subpage-banners" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#page-titles-subpage-banners" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--sticky" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Sticky Bar</a>
-                    <a href="http://bond.codeandmortar.com/docs/#sticky" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#sticky" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--forms" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Forms</a>
-                    <a href="http://bond.codeandmortar.com/docs/#forms" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#forms" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--datepicker" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Datepicker</a>
-                    <a href="http://bond.codeandmortar.com/docs/#datepicker-pikaday" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#datepicker-pikaday" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--filters" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Filters (Multiselect)</a>
-                    <a href="http://bond.codeandmortar.com/docs/#filters" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#filters" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--columns" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Columns</a>
-                    <a href="http://bond.codeandmortar.com/docs/#columns" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#columns" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--columns" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Search Results</a>
-                    <a href="http://bond.codeandmortar.com/docs/#search" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#search" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--cards" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Cards</a>
-                    <a href="http://bond.codeandmortar.com/docs/#cards" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#cards" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--footer" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Footer</a>
-                    <a href="http://bond.codeandmortar.com/docs/#footer" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#footer" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--footer" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Social Links</a>
-                    <a href="http://bond.codeandmortar.com/docs/#social" class="demo-nav__item-link--docs" target="_blank">Docs</a>
+                    <a href="https://bond.codeandmortar.com/docs/#social" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
 
             </ul>
@@ -427,7 +427,7 @@
                 <div class="main-header__container flex--justify-between flex--align-middle">
                     <!-- Logo -->
                     <a href="/" class="main-header__logo-link">
-                        <img src="http://bond.codeandmortar.com/assets/bond-logo.svg" class="main-header__logo" alt="Site Logo">
+                        <img src="https://bond.codeandmortar.com/assets/bond-logo.svg" class="main-header__logo" alt="Site Logo">
                     </a>
                     <!-- Language Toggle (Basic) -->
                     <ul class="language-toggle--basic">
@@ -1474,19 +1474,8 @@
         <!-- Component Script: Gallery -->
         <script defer src="assets/js/components/gallery/gallery.js"></script>
 
-        <script>
-            $(document).ready(function() {
-                $('.demo-nav__item-link').on('click', function(e) {
-                    $('.demo-nav__item-link').removeClass('current');
-                    $(this).addClass('current');
-                    $('div[data-sidebar-pane]').removeClass('current');
-                    $('ul[data-sidebar-level]').removeClass('current');
-                    $('a[data-sidebar-pane]').removeClass('current');
-                    $('.sidebar-nav__overlay').removeClass('show');
-                    $('html').removeClass('hide-overflow');
-                });
-            });
-        </script>
+        <!-- Component Script: Demo Nav -->
+        <script defer src="assets/js/components/bond/demo-nav.js"></script>
 
     </body>
 
