--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <!-- If adding a new vendor dependency, please ensure you add it to the 'bond' script in package.json. See documentation at https://bond.codeandmortar.com/docs. -->
 
         <!-- Fonts -->
-        <link rel="preconnect" crossorigin href="//fonts.googleapis.com/css?family=Roboto:400,400i,700i,900|Do+Hyeon">
-        <link rel="preconnect" crossorigin href="//use.typekit.net/urw6fuc.css">
+        <link rel="preconnect" href="//fonts.googleapis.com/css?family=Roboto:400,400i,700i,900|Do+Hyeon" crossorigin>
+        <link rel="preconnect" href="//use.typekit.net/urw6fuc.css" crossorigin>
 
         <!-- Vendor CSS: Normalize -->
         <link rel="preload" as="style" onload="this.rel='stylesheet'" href="assets/vendor/normalize.css">
