font preconnect test

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <!-- If adding a new vendor dependency, please ensure you add it to the 'bond' script in package.json. See documentation at https://bond.codeandmortar.com/docs. -->
 
         <!-- Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700i,900|Do+Hyeon" crossorigin>
-        <link rel="preconnect" href="https://use.typekit.net/urw6fuc.css" crossorigin>
+        <link rel="preconnect" href="//fonts.googleapis.com" crossorigin>
+        <link rel="preconnect" href="//use.typekit.net" crossorigin>
 
         <!-- Vendor CSS: Normalize -->
         <link rel="preload" as="style" onload="this.rel='stylesheet'" href="assets/vendor/normalize.css">
@@ -41,6 +41,8 @@
         <link rel="preload" as="style" onload="this.rel='stylesheet'" href="assets/css/style.css">
 
         <noscript>
+            <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,400i,700i,900|Do+Hyeon">
+            <link rel="stylesheet" href="//use.typekit.net/urw6fuc.css">
             <link rel="stylesheet" href="assets/vendor/normalize.css">
             <link rel="stylesheet" href="assets/vendor/slick.css">
             <link rel="stylesheet" href="assets/vendor/pikaday.css">
