preconnect test for fonts

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
         <!-- Vendor Dependencies -->
         <!-- If adding a new vendor dependency, please ensure you add it to the 'bond' script in package.json. See documentation at https://bond.codeandmortar.com/docs. -->
 
-        <!-- Fonts -->
+        <!-- Early Connections -->
         <link rel="preconnect" href="//fonts.googleapis.com" crossorigin>
         <link rel="preconnect" href="//use.typekit.net" crossorigin>
+
+        <!-- Fonts -->
+        <link rel="preload" as="style" onload="this.rel='stylesheet'" href="//fonts.googleapis.com/css?family=Roboto:400,400i,700i,900|Do+Hyeon">
+        <link rel="preload" as="style" onload="this.rel='stylesheet'" href="//use.typekit.net/urw6fuc.css">
 
         <!-- Vendor CSS: Normalize -->
         <link rel="preload" as="style" onload="this.rel='stylesheet'" href="assets/vendor/normalize.css">
