--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         <!-- JS files that do not rely or are not relied upon by other JS should get an 'async' attribute. JS files that DO rely or are relied upon by other JS should get a 'defer' attribute. -->
 
         <!-- jQuery -->
-        <script async src="assets/vendor/jquery.min.js"></script>
+        <script src="assets/vendor/jquery.min.js"></script>
 
         <!-- Modernizr -->
         <script async src="assets/vendor/modernizr.js"></script>
 
         <!-- LazyLoad -->
-        <script defer src="assets/vendor/lazyload.min.js"></script>
+        <script async src="assets/vendor/lazyload.min.js"></script>
 
     </head>
 
@@ -105,6 +105,12 @@
 
         <!-- Core Icons Include -->
         <div class="core-icons" style="display:none;"></div>
+
+        <script>
+            (function($) {
+                $('.core-icons').load('assets/icons/core-icons.svg');
+            })(jQuery);
+        </script>
 
         <!-- Sidebar Menu -->
         <div class="sidebar-nav__overlay"></div>
@@ -1434,9 +1440,6 @@
 
         <!-- Core Script: Base -->
         <script async src="assets/js/core.js"></script>
-
-        <!-- Component Script: Icons -->
-        <script defer src="assets/js/components/icons/icons.js"></script>
 
         <!-- Component Script: Alerts -->
         <script defer src="assets/js/components/alerts/alerts.js"></script>
