updating lazyload inclusion method

--- a/index.html
+++ b/index.html
@@ -93,9 +93,6 @@
         <!-- Modernizr -->
         <script async src="assets/vendor/modernizr.js"></script>
 
-        <!-- LazyLoad -->
-        <script async src="assets/vendor/lazyload.min.js"></script>
-
     </head>
 
     <body class="has-sidebar-nav">
@@ -117,7 +114,7 @@
         <ul class="sidebar-nav tab-bar--4-up">
             <li class="sidebar-nav__item--logo">
                 <a href="/" class="sidebar-nav__item-link">
-                    <img src="https://bond.codeandmortar.com/assets/bond-logo.svg" alt="Logo">
+                    <img data-src="https://bond.codeandmortar.com/assets/bond-logo.svg" alt="Logo">
                 </a>
             </li>
             <li class="sidebar-nav__item in-tab-bar">
@@ -439,7 +436,7 @@
                 <div class="main-header__container flex--justify-between flex--align-middle">
                     <!-- Logo -->
                     <a href="/" class="main-header__logo-link">
-                        <img src="https://bond.codeandmortar.com/assets/bond-logo.svg" class="main-header__logo" alt="Site Logo">
+                        <img data-src="https://bond.codeandmortar.com/assets/bond-logo.svg" class="main-header__logo" alt="Site Logo">
                     </a>
                     <!-- Language Toggle (Basic) -->
                     <ul class="language-toggle--basic">
@@ -517,7 +514,7 @@
                             <source src="assets/vid/bg-vid.mp4" type="video/mp4">Your browser does not support the video tag.
                         </video>
                         <div class="hero__video-poster">
-                            <img src="assets/vid/bg-vid.jpg" alt="">
+                            <img data-src="assets/vid/bg-vid.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -558,7 +555,7 @@
                         <h3>Basic Content Area</h3>
                         <!-- Wordpress Images (Basic) -->
                         <div>
-                            <img src="https://picsum.photos/255" alt="Wordpress Image" class="wp-image alignleft" id="section--wp-images">
+                            <img data-src="https://picsum.photos/255" alt="Wordpress Image" class="wp-image alignleft" id="section--wp-images">
                         </div>
                         <h5 class="reset--bottom">Overview</h5>
                         <p>The basic content area includes default styling for all usable elements within a WYSIWYG section. This area is especially useful for WordPress sites or other sites that require a CMS feature.</p>
@@ -578,7 +575,7 @@
                         <hr>
                         <!-- Wordpress Images (Captioned) -->
                         <div class="wp-caption wp-image alignright">
-                            <img src="https://picsum.photos/400/250" alt="Wordpress Image" class="filter--gray">
+                            <img data-src="https://picsum.photos/400/250" alt="Wordpress Image" class="filter--gray">
                             <p class="wp-caption-text">Bond supports WordPress caption syntax right out of the box!</p>
                         </div>
                         <h5 class="reset--bottom">Other Image Features</h5>
@@ -596,7 +593,7 @@
                         <!-- Broken Images -->
                         <h5 class="reset--bottom" id="section--broken-images">Broken Images</h5>
                         <p>If the path to any image is broken or missing, Bond gracefully handles the fallback by informing your user that the image was not found, along with the title and URL.</p>
-                        <img src="assets/img/rafting.jpg" alt="A Group of People White Water Rafting">
+                        <img data-src="assets/img/rafting.jpg" alt="A Group of People White Water Rafting">
                         <br><br>
                         <!-- Responsive Embed -->
                         <h5 class="reset--bottom" id="section--embeds">Responsive Embeds</h5>
@@ -813,7 +810,7 @@
                     <div class="blocks__group three-up stretch">
                         <article class="block">
                             <a href="#" class="block__image-link">
-                                <img src="https://picsum.photos/650/400?image=1024" alt="" class="block__image">
+                                <img data-src="https://picsum.photos/650/400?image=1024" alt="" class="block__image">
                             </a>
                             <div class="block__content-wrapper">
                                 <h5 class="block__subtitle">Block Label</h5>
@@ -831,7 +828,7 @@
                         </article>
                         <article class="block">
                             <a href="#" class="block__image-link">
-                                <img src="https://picsum.photos/650/400?image=1026" alt="" class="block__image">
+                                <img data-src="https://picsum.photos/650/400?image=1026" alt="" class="block__image">
                             </a>
                             <div class="block__content-wrapper">
                                 <h5 class="block__subtitle">Block Label</h5>
@@ -849,7 +846,7 @@
                         </article>
                         <article class="block">
                             <a href="#" class="block__image-link">
-                                <img src="https://picsum.photos/650/400?image=1025" alt="" class="block__image">
+                                <img data-src="https://picsum.photos/650/400?image=1025" alt="" class="block__image">
                             </a>
                             <div class="block__content-wrapper">
                                 <h5 class="block__subtitle">Block Label</h5>
@@ -994,19 +991,19 @@
                 <div class="container--xl">
                     <ul class="gallery">
                         <li class="gallery__item">
-                            <a href="#" class="gallery__item-link"><img src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
+                            <a href="#" class="gallery__item-link"><img data-src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
                         </li>
                         <li class="gallery__item">
-                            <a href="#" class="gallery__item-link"><img src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
+                            <a href="#" class="gallery__item-link"><img data-src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
                         </li>
                         <li class="gallery__item">
-                            <a href="#" class="gallery__item-link"><img src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
+                            <a href="#" class="gallery__item-link"><img data-src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
                         </li>
                         <li class="gallery__item">
-                            <a href="#" class="gallery__item-link"><img src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
+                            <a href="#" class="gallery__item-link"><img data-src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
                         </li>
                         <li class="gallery__item">
-                            <a href="#" class="gallery__item-link"><img src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
+                            <a href="#" class="gallery__item-link"><img data-src="https://placehold.it/200x150" alt="Thumbnail" class="gallery__item-image--thumbnail"></a>
                         </li>
                     </ul>
                 </div>
@@ -1407,24 +1404,33 @@
             <!-- Slides -->
             <div class="gallery__slides">
                 <div class="gallery__slide">
-                    <img src="https://placehold.it/768x250" alt="" class="gallery__item-image--full">
+                    <img data-src="https://placehold.it/768x250" alt="" class="gallery__item-image--full">
                 </div>
                 <div class="gallery__slide">
-                    <img src="https://placehold.it/480" alt="" class="gallery__item-image--full">
+                    <img data-src="https://placehold.it/480" alt="" class="gallery__item-image--full">
                 </div>
                 <div class="gallery__slide">
-                    <img src="https://placehold.it/1440" alt="" class="gallery__item-image--full">
+                    <img data-src="https://placehold.it/1440" alt="" class="gallery__item-image--full">
                 </div>
                 <div class="gallery__slide">
-                    <img src="https://placehold.it/800x1440" alt="" class="gallery__item-image--full">
+                    <img data-src="https://placehold.it/800x1440" alt="" class="gallery__item-image--full">
                 </div>
                 <div class="gallery__slide">
-                    <img src="https://placehold.it/700x1220" alt="" class="gallery__item-image--full">
+                    <img data-src="https://placehold.it/700x1220" alt="" class="gallery__item-image--full">
                 </div>
             </div>
         </div>
 
         <!-- DEV-NOTE: Analytics Reminder -->
+
+        <!-- LazyLoad -->
+        <script>
+            window.lazyLoadOptions = {
+                elements_selector: "img"
+            };
+        </script>
+
+        <script async src="assets/vendor/lazyload.min.js"></script>
 
         <!-- Vendor Script: MatchMedia -->
         <script async src="assets/vendor/matchMedia.js"></script>
